--- a/ps5-rmarkdown.html
+++ b/ps5-rmarkdown.html
@@ -377,23 +377,23 @@ columns.</p>
 <col width="3%" />
 <col width="1%" />
 <col width="2%" />
-<col width="5%" />
+<col width="9%" />
 <col width="5%" />
 <col width="1%" />
 <col width="4%" />
+<col width="3%" />
 <col width="4%" />
 <col width="4%" />
-<col width="4%" />
-<col width="5%" />
-<col width="5%" />
-<col width="4%" />
-<col width="2%" />
-<col width="5%" />
-<col width="5%" />
 <col width="5%" />
 <col width="5%" />
 <col width="3%" />
 <col width="2%" />
+<col width="5%" />
+<col width="4%" />
+<col width="5%" />
+<col width="4%" />
+<col width="3%" />
+<col width="3%" />
 <col width="4%" />
 <col width="2%" />
 <col width="2%" />
@@ -430,16 +430,16 @@ columns.</p>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">VNM</td>
-<td align="left">Viet Nam</td>
-<td align="left">VN</td>
-<td align="left">Asia</td>
-<td align="left">South-eastern Asia</td>
+<td align="left">LVA</td>
+<td align="left">Latvia</td>
+<td align="left">LV</td>
+<td align="left">Europe</td>
+<td align="left">Northern Europe</td>
 <td align="left">NA</td>
-<td align="right">1960</td>
-<td align="right">32670039</td>
-<td align="right">6.348</td>
-<td align="right">59.03900</td>
+<td align="right">1965</td>
+<td align="right">2265919</td>
+<td align="right">1.740</td>
+<td align="right">70.72659</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
@@ -450,117 +450,117 @@ columns.</p>
 <td align="right">NA</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
-<td align="right">5944.207</td>
 <td align="right">NA</td>
-<td align="right">0.18195</td>
+<td align="right">NA</td>
+<td align="right">NA</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
 </tr>
 <tr class="even">
-<td align="left">GIN</td>
-<td align="left">Guinea</td>
-<td align="left">GN</td>
+<td align="left">SEN</td>
+<td align="left">Senegal</td>
+<td align="left">SN</td>
 <td align="left">Africa</td>
 <td align="left">Sub-Saharan Africa</td>
 <td align="left">Western Africa</td>
-<td align="right">2017</td>
-<td align="right">12067539</td>
-<td align="right">4.777</td>
-<td align="right">60.70600</td>
-<td align="right">103.2</td>
+<td align="right">2012</td>
+<td align="right">13401991</td>
+<td align="right">5.005</td>
+<td align="right">65.44800</td>
+<td align="right">60.0</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
-<td align="right">869.019</td>
-<td align="right">35.4</td>
-<td align="right">145000</td>
+<td align="right">1291.6222</td>
+<td align="right">56.50</td>
+<td align="right">89650</td>
 <td align="right">NA</td>
-<td align="right">3735324</td>
-<td align="right">15.61060</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
-<td align="right">0</td>
+<td align="right">1499757</td>
+<td align="right">10.52424</td>
+<td align="right">7913.386</td>
+<td align="right">54185.37</td>
+<td align="right">0.59046</td>
+<td align="right">65.2715</td>
 <td align="right">NA</td>
 </tr>
 <tr class="odd">
-<td align="left">ZAF</td>
-<td align="left">South Africa</td>
-<td align="left">ZA</td>
-<td align="left">Africa</td>
-<td align="left">Sub-Saharan Africa</td>
-<td align="left">Southern Africa</td>
-<td align="right">2018</td>
-<td align="right">57792520</td>
-<td align="right">2.405</td>
-<td align="right">63.85700</td>
-<td align="right">35.0</td>
+<td align="left">KAZ</td>
+<td align="left">Kazakhstan</td>
+<td align="left">KZ</td>
+<td align="left">Asia</td>
+<td align="left">Central Asia</td>
+<td align="left">NA</td>
+<td align="right">2003</td>
+<td align="right">14909019</td>
+<td align="right">2.030</td>
+<td align="right">65.74000</td>
+<td align="right">35.1</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
-<td align="right">7431.956</td>
-<td align="right">84.7</td>
-<td align="right">963410</td>
+<td align="right">6107.7088</td>
+<td align="right">99.92</td>
+<td align="right">2130014</td>
 <td align="right">NA</td>
-<td align="right">14971922</td>
-<td align="right">72.83333</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
+<td align="right">14738300</td>
+<td align="right">1.19039</td>
+<td align="right">142209.927</td>
+<td align="right">256799.01</td>
+<td align="right">9.53852</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
 </tr>
 <tr class="even">
-<td align="left">SVK</td>
-<td align="left">Slovakia</td>
-<td align="left">SK</td>
-<td align="left">Europe</td>
-<td align="left">Eastern Europe</td>
-<td align="left">NA</td>
-<td align="right">1967</td>
-<td align="right">4449367</td>
-<td align="right">2.480</td>
-<td align="right">70.41854</td>
+<td align="left">BRA</td>
+<td align="left">Brazil</td>
+<td align="left">BR</td>
+<td align="left">Americas</td>
+<td align="left">Latin America and the Caribbean</td>
+<td align="left">South America</td>
+<td align="right">1969</td>
+<td align="right">92746614</td>
+<td align="right">5.120</td>
+<td align="right">58.47500</td>
+<td align="right">135.8</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
+<td align="right">4435.3790</td>
 <td align="right">NA</td>
+<td align="right">1866150</td>
+<td align="right">155400</td>
+<td align="right">20549860</td>
+<td align="right">22.62604</td>
+<td align="right">84315.331</td>
 <td align="right">NA</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
+<td align="right">0.90909</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
 </tr>
 <tr class="odd">
-<td align="left">HKG</td>
-<td align="left">Hong Kong</td>
-<td align="left">HK</td>
+<td align="left">IDN</td>
+<td align="left">Indonesia</td>
+<td align="left">ID</td>
 <td align="left">Asia</td>
-<td align="left">Eastern Asia</td>
+<td align="left">South-eastern Asia</td>
 <td align="left">NA</td>
-<td align="right">1999</td>
-<td align="right">6606500</td>
-<td align="right">0.981</td>
-<td align="right">80.38293</td>
+<td align="right">1963</td>
+<td align="right">95015297</td>
+<td align="right">5.634</td>
+<td align="right">48.46800</td>
+<td align="right">206.1</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
+<td align="right">671.2483</td>
 <td align="right">NA</td>
-<td align="right">21566.928</td>
-<td align="right">100.0</td>
-<td align="right">70</td>
+<td align="right">385500</td>
+<td align="right">50</td>
+<td align="right">13952800</td>
+<td align="right">7.22222</td>
+<td align="right">22783.071</td>
 <td align="right">NA</td>
-<td align="right">0</td>
-<td align="right">NA</td>
-<td align="right">42716.883</td>
-<td align="right">48968.04</td>
-<td align="right">6.46589</td>
+<td align="right">0.23978</td>
 <td align="right">NA</td>
 <td align="right">NA</td>
 </tr>
@@ -856,301 +856,226 @@ followed by Europe.</p>
 </div>
 <div id="question-6" class="section level3">
 <h3>Question 6</h3>
-<pre class="r"><code>top3countries_co2_pc &lt;- function(region_name){
+<pre class="r"><code>top_bottom_3countries_co2_pc &lt;- function(region_name){
   gapminder %&gt;% 
     filter(!is.na(co2_PC), !is.na(region), !is.na(name)) %&gt;%
     filter(time == &quot;2016&quot;) %&gt;% 
     filter(region == region_name) %&gt;% 
-    group_by(name, region) %&gt;% 
-    summarize(avg_co2 = mean(co2_PC))  %&gt;%
-    arrange(desc(avg_co2)) %&gt;% 
-    head(3) %&gt;% 
+    filter(rank(desc(co2_PC))&lt; 4|rank(co2_PC)&lt; 4) %&gt;% 
+    select(region, name, co2_PC) %&gt;% 
+    arrange(desc(co2_PC)) %&gt;% 
     knitr::kable()
 }
-bottom3countries_co2_pc &lt;- function(region_name){
-  gapminder %&gt;% 
-    filter(!is.na(co2_PC), !is.na(region), !is.na(name)) %&gt;%
-    filter(time == &quot;2016&quot;) %&gt;% 
-    filter(region == region_name) %&gt;% 
-    group_by(name, region) %&gt;% 
-    summarize(avg_co2 = mean(co2_PC))  %&gt;%
-    arrange((avg_co2)) %&gt;% 
-    head(3) %&gt;% 
-    knitr::kable()
-}
-
-top3countries_co2_pc(&quot;Africa&quot;)</code></pre>
+top_bottom_3countries_co2_pc(&quot;Africa&quot;)</code></pre>
 <table>
 <thead>
 <tr class="header">
-<th align="left">name</th>
 <th align="left">region</th>
-<th align="right">avg_co2</th>
+<th align="left">name</th>
+<th align="right">co2_PC</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">South Africa</td>
 <td align="left">Africa</td>
+<td align="left">South Africa</td>
 <td align="right">8.48006</td>
 </tr>
 <tr class="even">
-<td align="left">Libya</td>
 <td align="left">Africa</td>
+<td align="left">Libya</td>
 <td align="right">7.78851</td>
 </tr>
 <tr class="odd">
-<td align="left">Seychelles</td>
 <td align="left">Africa</td>
+<td align="left">Seychelles</td>
 <td align="right">6.39073</td>
 </tr>
-</tbody>
-</table>
-<pre class="r"><code>bottom3countries_co2_pc(&quot;Africa&quot;)</code></pre>
-<table>
-<thead>
-<tr class="header">
-<th align="left">name</th>
-<th align="left">region</th>
-<th align="right">avg_co2</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">Congo, Democratic Republic of the</td>
-<td align="left">Africa</td>
-<td align="right">0.02564</td>
-</tr>
 <tr class="even">
-<td align="left">Somalia</td>
 <td align="left">Africa</td>
-<td align="right">0.04550</td>
-</tr>
-<tr class="odd">
 <td align="left">Burundi</td>
-<td align="left">Africa</td>
 <td align="right">0.04720</td>
 </tr>
+<tr class="odd">
+<td align="left">Africa</td>
+<td align="left">Somalia</td>
+<td align="right">0.04550</td>
+</tr>
+<tr class="even">
+<td align="left">Africa</td>
+<td align="left">Congo, Democratic Republic of the</td>
+<td align="right">0.02564</td>
+</tr>
 </tbody>
 </table>
-<pre class="r"><code>top3countries_co2_pc(&quot;Americas&quot;)</code></pre>
+<pre class="r"><code>top_bottom_3countries_co2_pc(&quot;Americas&quot;)</code></pre>
 <table>
 <thead>
 <tr class="header">
-<th align="left">name</th>
 <th align="left">region</th>
-<th align="right">avg_co2</th>
+<th align="left">name</th>
+<th align="right">co2_PC</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">Trinidad and Tobago</td>
 <td align="left">Americas</td>
+<td align="left">Trinidad and Tobago</td>
 <td align="right">31.84485</td>
 </tr>
 <tr class="even">
-<td align="left">United States of America</td>
 <td align="left">Americas</td>
+<td align="left">United States of America</td>
 <td align="right">15.50220</td>
 </tr>
 <tr class="odd">
-<td align="left">Canada</td>
 <td align="left">Americas</td>
+<td align="left">Canada</td>
 <td align="right">15.09006</td>
 </tr>
-</tbody>
-</table>
-<pre class="r"><code>bottom3countries_co2_pc(&quot;Americas&quot;)</code></pre>
-<table>
-<thead>
-<tr class="header">
-<th align="left">name</th>
-<th align="left">region</th>
-<th align="right">avg_co2</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">Haiti</td>
-<td align="left">Americas</td>
-<td align="right">0.27469</td>
-</tr>
 <tr class="even">
-<td align="left">Nicaragua</td>
 <td align="left">Americas</td>
-<td align="right">0.88709</td>
-</tr>
-<tr class="odd">
 <td align="left">Honduras</td>
-<td align="left">Americas</td>
 <td align="right">1.05847</td>
 </tr>
+<tr class="odd">
+<td align="left">Americas</td>
+<td align="left">Nicaragua</td>
+<td align="right">0.88709</td>
+</tr>
+<tr class="even">
+<td align="left">Americas</td>
+<td align="left">Haiti</td>
+<td align="right">0.27469</td>
+</tr>
 </tbody>
 </table>
-<pre class="r"><code>top3countries_co2_pc(&quot;Asia&quot;)</code></pre>
+<pre class="r"><code>top_bottom_3countries_co2_pc(&quot;Asia&quot;)</code></pre>
 <table>
 <thead>
 <tr class="header">
-<th align="left">name</th>
 <th align="left">region</th>
-<th align="right">avg_co2</th>
+<th align="left">name</th>
+<th align="right">co2_PC</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">Qatar</td>
 <td align="left">Asia</td>
+<td align="left">Qatar</td>
 <td align="right">38.90147</td>
 </tr>
 <tr class="even">
-<td align="left">Kuwait</td>
 <td align="left">Asia</td>
+<td align="left">Kuwait</td>
 <td align="right">24.95251</td>
 </tr>
 <tr class="odd">
-<td align="left">Bahrain</td>
 <td align="left">Asia</td>
+<td align="left">Bahrain</td>
 <td align="right">22.22898</td>
 </tr>
-</tbody>
-</table>
-<pre class="r"><code>bottom3countries_co2_pc(&quot;Asia&quot;)</code></pre>
-<table>
-<thead>
-<tr class="header">
-<th align="left">name</th>
-<th align="left">region</th>
-<th align="right">avg_co2</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">Afghanistan</td>
-<td align="left">Asia</td>
-<td align="right">0.24510</td>
-</tr>
 <tr class="even">
-<td align="left">Nepal</td>
 <td align="left">Asia</td>
-<td align="right">0.33400</td>
-</tr>
-<tr class="odd">
 <td align="left">Yemen</td>
-<td align="left">Asia</td>
 <td align="right">0.39048</td>
 </tr>
+<tr class="odd">
+<td align="left">Asia</td>
+<td align="left">Nepal</td>
+<td align="right">0.33400</td>
+</tr>
+<tr class="even">
+<td align="left">Asia</td>
+<td align="left">Afghanistan</td>
+<td align="right">0.24510</td>
+</tr>
 </tbody>
 </table>
-<pre class="r"><code>top3countries_co2_pc(&quot;Europe&quot;)</code></pre>
+<pre class="r"><code>top_bottom_3countries_co2_pc(&quot;Europe&quot;)</code></pre>
 <table>
 <thead>
 <tr class="header">
-<th align="left">name</th>
 <th align="left">region</th>
-<th align="right">avg_co2</th>
+<th align="left">name</th>
+<th align="right">co2_PC</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">Gibraltar</td>
 <td align="left">Europe</td>
+<td align="left">Gibraltar</td>
 <td align="right">18.80401</td>
 </tr>
 <tr class="even">
-<td align="left">Luxembourg</td>
 <td align="left">Europe</td>
+<td align="left">Luxembourg</td>
 <td align="right">15.44261</td>
 </tr>
 <tr class="odd">
-<td align="left">Faroe Islands</td>
 <td align="left">Europe</td>
+<td align="left">Faroe Islands</td>
 <td align="right">13.09289</td>
 </tr>
-</tbody>
-</table>
-<pre class="r"><code>bottom3countries_co2_pc(&quot;Europe&quot;)</code></pre>
-<table>
-<thead>
-<tr class="header">
-<th align="left">name</th>
-<th align="left">region</th>
-<th align="right">avg_co2</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">Liechtenstein</td>
-<td align="left">Europe</td>
-<td align="right">1.36327</td>
-</tr>
 <tr class="even">
-<td align="left">Albania</td>
 <td align="left">Europe</td>
-<td align="right">1.57716</td>
-</tr>
-<tr class="odd">
 <td align="left">Moldova, Republic of</td>
-<td align="left">Europe</td>
 <td align="right">1.82554</td>
 </tr>
+<tr class="odd">
+<td align="left">Europe</td>
+<td align="left">Albania</td>
+<td align="right">1.57716</td>
+</tr>
+<tr class="even">
+<td align="left">Europe</td>
+<td align="left">Liechtenstein</td>
+<td align="right">1.36327</td>
+</tr>
 </tbody>
 </table>
-<pre class="r"><code>top3countries_co2_pc(&quot;Oceania&quot;)</code></pre>
+<pre class="r"><code>top_bottom_3countries_co2_pc(&quot;Oceania&quot;)</code></pre>
 <table>
 <thead>
 <tr class="header">
-<th align="left">name</th>
 <th align="left">region</th>
-<th align="right">avg_co2</th>
+<th align="left">name</th>
+<th align="right">co2_PC</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">New Caledonia</td>
 <td align="left">Oceania</td>
+<td align="left">New Caledonia</td>
 <td align="right">19.26650</td>
 </tr>
 <tr class="even">
-<td align="left">Australia</td>
 <td align="left">Oceania</td>
+<td align="left">Australia</td>
 <td align="right">15.53922</td>
 </tr>
 <tr class="odd">
-<td align="left">Palau</td>
 <td align="left">Oceania</td>
+<td align="left">Palau</td>
 <td align="right">12.61986</td>
 </tr>
-</tbody>
-</table>
-<pre class="r"><code>bottom3countries_co2_pc(&quot;Oceania&quot;)</code></pre>
-<table>
-<thead>
-<tr class="header">
-<th align="left">name</th>
-<th align="left">region</th>
-<th align="right">avg_co2</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">Solomon Islands</td>
-<td align="left">Oceania</td>
-<td align="right">0.27232</td>
-</tr>
 <tr class="even">
-<td align="left">Vanuatu</td>
 <td align="left">Oceania</td>
-<td align="right">0.52700</td>
-</tr>
-<tr class="odd">
 <td align="left">Kiribati</td>
-<td align="left">Oceania</td>
 <td align="right">0.58659</td>
 </tr>
+<tr class="odd">
+<td align="left">Oceania</td>
+<td align="left">Vanuatu</td>
+<td align="right">0.52700</td>
+</tr>
+<tr class="even">
+<td align="left">Oceania</td>
+<td align="left">Solomon Islands</td>
+<td align="right">0.27232</td>
+</tr>
 </tbody>
 </table>
-<p>This is super inefficient but I couldn’t get my pipe to work or a for
-loop and I ran out of time.</p>
 </div>
 </div>
 <div id="gdp-per-capita" class="section level2">
